--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -11,3 +11,9 @@
 {% block menu_tutorial %}
     current
 {% endblock %}
+
+{% block sidebar %}
+<aside class="sidebar mobile-menu-hide">
+	{% block headline-actions %}{% endblock %}
+</aside>
+{% endblock %}
