--- a/templates/tutorial/view_part_online.html
+++ b/templates/tutorial/view_part_online.html
@@ -24,3 +24,16 @@
 </div>
 
 {% endblock %}
+
+{% block headline-actions %}
+	{% with tutorial=part.tutorial %}
+	{% with parts=part.tutorial.parts %}
+    	{% include "tutorial/toc_common_online.html" %}
+    {% endwith %}
+    {% endwith %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions sur ce sujet">
+        <h3><span class="wide">Télécharger</span></h3>
+        <h4><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></h4>
+        <h4><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></h4>
+    </div>
+{% endblock %}
