--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -17,11 +17,12 @@
 {% endblock %}
 
 {% block headline-actions %}
-    <a href="#" data-dropdown="drop_dl" class="button secondary small expand"><i class="fi-download"></i>Télécharger</a><br>
-    <ul id="drop_dl" class="f-dropdown">
-      <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
-      <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
-    </ul>
+    {% include "tutorial/toc_common_online.html" %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions sur ce sujet">
+        <h3><span class="wide">Télécharger</span></h3>
+        <h4><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></h4>
+        <h4><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></h4>
+    </div>
 {% endblock %}
 
 {% block content %}
