Fix list articles in index

--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -60,7 +60,7 @@
                         {% endif %}
                     </div>
                     <div class="large-10 columns">
-                        <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+                        <a href="{{ article.get_absolute_url_online }}">{{ article.title }}</a>
                         <p>{{ article.description }}</p>
                     </div>
                     <div class="large-1 columns">
